# ccta

./: chrono312_full.yml  environment.yml
install/: local_setup.sh  setup.sh
install/teleop_bridge_msgs/share/teleop_bridge_msgs/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/teleop_bridge_msgs/share/teleop_bridge_msgs/cmake/: ament_cmake_export_targets-extras.cmake  export_teleop_bridge_msgs__rosidl_generator_cExport-noconfig.cmake  export_teleop_bridge_msgs__rosidl_generator_cExport.cmake  export_teleop_bridge_msgs__rosidl_generator_cppExport.cmake  export_teleop_bridge_msgs__rosidl_generator_pyExport.cmake  export_teleop_bridge_msgs__rosidl_typesupport_fastrtps_cExport-noconfig.cmake  export_teleop_bridge_msgs__rosidl_typesupport_fastrtps_cppExport-noconfig.cmake  export_teleop_bridge_msgs__rosidl_typesupport_fastrtps_cppExport.cmake  teleop_bridge_msgs__rosidl_typesupport_cExport-noconfig.cmake  teleop_bridge_msgs__rosidl_typesupport_cExport.cmake  teleop_bridge_msgs__rosidl_typesupport_introspection_cExport-noconfig.cmake  teleop_bridge_msgs__rosidl_typesupport_introspection_cExport.cmake  teleop_bridge_msgs__rosidl_typesupport_introspection_cppExport-noconfig.cmake  teleop_bridge_msgs__rosidl_typesupport_introspection_cppExport.cmake
install/teleop_bridge_msgs/share/teleop_bridge_msgs/msg/: ControlCommand.json  DriverInput.idl  EgoState.idl  EgoState.json  TrackedVehicle.idl  TrackedVehicle.json  TrackedVehicle.msg  TrackedVehicleArray.idl  TrackedVehicleArray.json  WarningStatus.idl  WarningStatus.json
install/teleop_controller_bridge/lib/teleop_controller_bridge/: ccta_teleop_controller
install/teleop_controller_bridge/share/teleop_controller_bridge/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
log/: latest_build
teleop_bridge_msgs/: CMakeLists.txt  package.xml
teleop_bridge_msgs/msg/: ControlCommand.msg  DriverInput.msg  WarningStatus.msg
teleop_controller_bridge/: MANIFEST.in  package.xml  setup.cfg  setup.py
teleop_controller_bridge/resource/: teleop_controller_bridge
teleop_controller_bridge/teleop_controller_bridge/: ccta_bridge_node.py
teleop_controller_bridge/teleop_controller_bridge/ccta_assets/: DobCBFHelper.py  LSTMHelper.py  __init__.py
(+59 files in other folders)
