<?xml version="1.0"?>
<package format="3">
  <name>teleop_bridge_msgs</name>
  <version>0.1.0</version>
  <description>Message definitions for the Chrono teleoperation ROS2 bridge.</description>
  <maintainer email="kyle@example.com">Kyle</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>builtin_interfaces</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>
</package>
