<?xml version="1.0"?>
<package format="3">
  <name>teleop_controller_bridge</name>
  <version>0.1.0</version>
  <description>ROS2 node that adapts the CCTA delay-compensation + safety controller for Chrono-HIL.</description>
  <maintainer email="kyle@example.com">Kyle</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>builtin_interfaces</depend>
  <depend>geometry_msgs</depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>teleop_bridge_msgs</depend>
  <depend>visualization_msgs</depend>

  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-scipy</exec_depend>
  <exec_depend>python3-casadi</exec_depend>
  <exec_depend>python3-torch</exec_depend>
  <exec_depend>python3-pandas</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
